tests/ui/parser/shebang/shebang-must-start-file.stderr
error: expected `[`, found `/`
  --> $DIR/shebang-must-start-file.rs:2:3
   |
LL | #!/bin/bash
   |   ^ expected `[`
   |
   = note: shebangs `#!` must be at the start of the file

error: aborting due to 1 previous error

